fix text align in lib

--- a/blog/static/css/styles.css
+++ b/blog/static/css/styles.css
@@ -737,31 +737,48 @@ header a{
     position: relative;
 }
 
-.misio-img{
+.misio-img-uk{
     padding-top: 60px;
+    width: 640px; 
+    height: 1052px;
+}
+
+.misio-img-en{
+    padding-top: 60px;
+    width: 640px; 
+    height: 825px;
 }
 
 .misio-img img{
-    width: 640px; 
-    height: 760px;
+    width: 100%; 
+    height: 100%;
 }
 
-.visio-img{
+.visio-img-uk{
     padding-top: 60px;
+    width: 640px; 
+    height: 654px;
 }
 
-.visio-img img{
-    height: 530px; 
+.visio-img-en{
+    padding-top: 60px;
+    height: 597px; 
     width: 640px;
 }
 
-.index-img{
-    padding-top: 60px;
+.visio-img img{
+    width: 100%; 
+    height: 100%;
 }
 
+/* .index-img{
+    padding-top: 60px;
+
+} */
+
 .index-img img{
-    width: 100%;
-    height: 350px;
+    width: 100%; 
+    height: 100%;
 }
 
 .anual-img{
@@ -769,8 +786,8 @@ header a{
 }
 
 .anual-img img{
-    width: 100%;
-    height: 500px;
+    width: 100%; 
+    height: 100%;
 }
 
 .form-library > div{
@@ -865,5 +882,14 @@ header a{
 }
 
 .last-news-aside{
+    background: rgba(0, 0, 0, 0);
     border: 0 solid rgba(0,0,0,.125);
+}
+
+.book-banner{
+    height: 255px;
+    width: 170px;
+}
+.book-content{
+    text-align: justify;
 }
